fix: use light text on button even in dark mode
Note:
- accessibility issue with light color on primary
- for now leaving it on icon buttons

--- a/src/stories/atomic-components/buttons/button.css
+++ b/src/stories/atomic-components/buttons/button.css
@@ -11,7 +11,7 @@
   }
 
   .button.btn-primary {
-    @apply bg-[var(--current-primary)];
+    @apply bg-[var(--current-primary)] text-[var(--light-text)];
   }
 
   .button.btn-secondary {
